--- a/counter.css
+++ b/counter.css
@@ -49,7 +49,7 @@ body{
     text-align: center;
     border-radius: 20px;
     font-size: 20px;
-    border: none;
+/*     border: none; */
     cursor: pointer;
 }
 
