--- a/counter.css
+++ b/counter.css
@@ -44,12 +44,12 @@ body{
 
 .button{
     border: 2px solid black;
-    width: 100px;
-    padding: 10px;
+    width: 10px;
+    padding: 120px;
     text-align: center;
     border-radius: 20px;
     font-size: 20px;
-/*     border: none; */
+    border: none;
     cursor: pointer;
 }
 
